# math-solver

./: .gitignore  README.md  behavioural_questions.md
src/: docker-compose.yml
src/backend/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/backend/api/: deps.py
src/backend/api/routers/: solve.py
src/backend/core/: config.py  schemas.py
src/backend/providers/: __init__.py  model_factory.py  vision.py
src/backend/reasoner/: graph.py
src/backend/utils/: image_ocr.py
src/frontend/: Dockerfile  docker-compose.yml  package-lock.json  package.json
src/frontend/src/app/: globals.css  layout.tsx  page.tsx
src/frontend/src/components/: Header.tsx  ResultCard.tsx  SolverImageForm.tsx  SolverTextForm.tsx  StepsList.tsx
src/frontend/src/types/: api.ts
src/mobile/: firebase.json  pubspec.yaml
src/mobile/android/app/: google-services.json
src/mobile/ios/Runner.xcodeproj/: project.pbxproj
src/mobile/lib/: config.dart  firebase_options.dart  main.dart  providers.dart
src/mobile/lib/models/: history_entry.dart  solution_result.dart
src/mobile/lib/pages/: history_page.dart  image_solve_page.dart  result_page.dart  text_solve_page.dart
src/mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
src/mobile/macos/Runner/: GoogleService-Info.plist
src/mobile/macos/Runner.xcodeproj/: project.pbxproj
